disable select of

--- a/patch_view_template.html
+++ b/patch_view_template.html
@@ -62,6 +62,7 @@
 
         td.num {
             text-align: right;
+            user-select:none;
         }
 
         col.status {
@@ -74,6 +75,7 @@
         td.status {
             text-align: center;
             background-color: rgb(201, 201, 201);
+            user-select:none;
         }
 
         col.code {
